# server_study

./: README.md
be/: pyproject.toml
be/app/: main.py
fe/: package-lock.json  package.json
fe/src/: App.js
nginx/: nginx.conf
vllm/: setup.md
