[project]
name = "server-study-be"
version = "0.1.0"
description = ""
authors = [
    {name = "yhyunpy",email = "yhyun.py@gmail.com"}
]

requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
